Fix story tile visibility in filtered grid

--- a/styles/stories.css
+++ b/styles/stories.css
@@ -174,7 +174,7 @@
 .story-tile {
   position: relative;
   min-width: 0;
-  align-self: start;
+  height: 100%;
 }
 
 .story-size-square {
